manifests/filebrowser/file-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  namespace: filebrowser
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: filebrowser
          image: filebrowser/filebrowser
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /srv
              subPath: srv
            - name: data
              mountPath: /database
              subPath: database
            - name: data
              mountPath: /config
              subPath: config
          
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: filebrowser-pvc
