manifests/filebrowser/file-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: filebrowser-route
  namespace: filebrowser
spec:
  parentRefs:
    - name: filebrowser-gateway
      sectionName: files-https
  hostnames:
    - files.home.nipo
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: oauth2-proxy-filebrowser
          namespace: auth
          port: 4180
